@@ -60,23 +60,24 @@ libpioneers_a_SOURCES = \
 
 common/authors.h: AUTHORS
 	@mkdir_p@ common
-	$(ECHO) $(ECHO_N) "#define AUTHORLIST " > $@
+	printf '#define AUTHORLIST ' > $@
 	$(SED) -e's/ <.*//; s/$$/", \\/; s/^/"/; /^"[[:space:]]*", \\$$/d' $< >> $@
-	$(ECHO) "NULL" >> $@
+	printf 'NULL\n' >> $@
 
 # This target is not called common/version.h (although it builds that file),
 # because it must be PHONY, but should only be rebuilt once.
 build_version:
 	@mkdir_p@ common
-	$(ECHO) $(ECHO_N) '#define FULL_VERSION "$(VERSION)' > common/version.new
+	printf '#define FULL_VERSION "$(VERSION)' > common/version.new
 	if svn info > /dev/null 2>&1; then				\
-		$(ECHO) $(ECHO_N) ".r`svn info | grep Revision | cut -f2 -d\ `"	\
-			>> common/version.new				;\
-		if svn status | grep -vq ^\? ; then			\
-			$(ECHO) $(ECHO_N) '.M' >> common/version.new		;\
+		svn info |                                              \
+		$(AWK) '$$1 == "Revision:" { printf ".r%s", $$2 }'      \
+			>> common/version.new                           ;\
+		if svn status | $(GREP) -vq ^\? ; then			\
+			printf '.M' >> common/version.new		;\
 		fi							;\
 	fi
-	$(ECHO) '"' >> common/version.new
+	printf '"\n' >> common/version.new
 	if diff common/version.h common/version.new > /dev/null 2>&1; then \
 		rm common/version.new					;\
 	else								\
